deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi
  labels:
    app: usersapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersapi
  template:
    metadata:
      labels:
        app: usersapi
    spec:
      containers:
      - name: usersapi
        image: k3d-KwetterRegistry:5000/usersapi:v0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: usersapi-service
spec:
  selector:
    app: usersapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usersapi-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: usersapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usersapi-service
            port:
              number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweetsapi
  labels:
    app: tweetsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweetsapi
  template:
    metadata:
      labels:
        app: tweetsapi
    spec:
      containers:
      - name: tweetsapi
        image: k3d-KwetterRegistry:5000/tweetsapi:v0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: tweetsapi-service
spec:
  selector:
    app: tweetsapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweetsapi-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: tweetsapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tweetsapi-service
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayapi
  labels:
    app: gatewayapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayapi
  template:
    metadata:
      labels:
        app: gatewayapi
    spec:
      containers:
      - name: gatewayapi
        image: k3d-KwetterRegistry:5000/gatewayapi:v0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayapi-service
spec:
  selector:
    app: gatewayapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatewayapi-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: gatewayapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewayapi-service
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: followersapi
  labels:
    app: followersapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: followersapi
  template:
    metadata:
      labels:
        app: followersapi
    spec:
      containers:
      - name: followersapi
        image: k3d-KwetterRegistry:5000/followersapi:v0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: followersapi-service
spec:
  selector:
    app: followersapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: followersapi-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: followersapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: followersapi-service
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationsapi
  labels:
    app: notificationsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationsapi
  template:
    metadata:
      labels:
        app: notificationsapi
    spec:
      containers:
      - name: notificationsapi
        image: k3d-KwetterRegistry:5000/notificationsapi:v0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: notificationsapi-service
spec:
  selector:
    app: notificationsapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificationsapi-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: notificationsapi.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notificationsapi-service
            port:
              number: 80
---
